--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,12 @@
             <version>2.13.0</version>
         </dependency>
         
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.7.2</version>
+        </dependency>
+        
     </dependencies>
     <build>
         <plugins>
